--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "jwt-decode": "^4.0.0"
+  },
+  "devDependencies": {
+    "@prisma/client": "^6.11.1",
+    "prisma": "^6.11.1"
   }
 }
