--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "jwt-decode": "^4.0.0"
+    "jwt-decode": "^4.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@prisma/client": "^6.11.1",
